--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ author: Tongzhou Song
 ###############################################
 
 navbar-links:
-  About Me: "aboutme"
+  All About Alex: "aboutme"
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
@@ -32,7 +32,7 @@ navbar-links:
 
 # Image to show in the navigation bar - works best with a square image
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/assets/img/88424B8C-06E3-4EA6-81FC-2B2C9BDE7CD6.jpeg"
+avatar: "/assets/img/EA7DAC11-3F12-4F7E-B3D8-2CFE5A9C4558.jpeg"
 
 # By default, the image is cut into a circle. You can disable this behaviour by setting 'round-avatar: false'
 round-avatar: true
@@ -94,7 +94,7 @@ share-links-active:
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+# url-pretty: "MyWebsite.com"
 
 # Excerpt word length - Truncate the excerpt of each post on the feed page to the specified number of words
 excerpt_length: 50
@@ -117,7 +117,7 @@ edit_page_button: true
 navbar-var-length: false
 
 # The keywords to associate with your website, for SEO purposes
-#keywords: "my,list,of,keywords"
+keywords: "Tongzhou Song,Alex SONG,Univerisy of Alberta,宋同舟"
 
 ######################################
 # --- Colours / background image --- #
