--- a/_config.yml
+++ b/_config.yml
@@ -125,10 +125,10 @@ keywords: "Tongzhou Song,Alex SONG,Univerisy of Alberta,宋同舟"
 
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
-navbar-col: "#EAEAEA"
+navbar-col: "#283643"
 navbar-text-col: "#404040"
 navbar-border-col: "#DDDDDD"
-page-col: "#FFFFFF"
+page-col: "#B47844"
 text-col: "#404040"
 link-col: "#008AFF"
 hover-col: "#0085A1"
