--- a/_config.yml
+++ b/_config.yml
@@ -126,14 +126,14 @@ keywords: "Tongzhou Song,Alex SONG,Univerisy of Alberta,宋同舟"
 # Personalize the colours in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#283643"
-navbar-text-col: "#404040"
+navbar-text-col: "#B47844"
 navbar-border-col: "#DDDDDD"
 page-col: "#B47844"
-text-col: "#404040"
+text-col: "#283643"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#EAEAEA"
-footer-text-col: "#777777"
+footer-col: "#283643"
+footer-text-col: "#B47844"
 footer-link-col: "#404040"
 footer-hover-col: "#0085A1"
 
