--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
-#title-img: /path/to/image
+title-img: "/assets/img/EA7DAC11-3F12-4F7E-B3D8-2CFE5A9C4558.jpeg"
 
 
 #####################################
