--- a/_config.yml
+++ b/_config.yml
@@ -39,7 +39,7 @@ round-avatar: true
 
 # If you want to have an image logo in the top-left corner instead of having the title of the website,
 # then specify the following parameter
-title-img: "/assets/img/074EFDDA-5CD0-4116-82E7-E65C295BA4AA.jpeg"
+title-img: "/assets/img/未命名作品.png"
 
 
 #####################################
