--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,11 @@ author: Tongzhou Song
 
 navbar-links:
   All About Alex: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
+  Alex At Work:
+    - Resume: "resume"
+    - More: "https://www.markdowntutorial.com/"
   Author's home: "https://deanattali.com"
+  Alex At Home: ""
 
 ################
 # --- Logo --- #
