--- a/_config.yml
+++ b/_config.yml
@@ -23,8 +23,7 @@ navbar-links:
   All About Alex: "aboutme"
   Alex At Work:
     - Resume: "resume"
-    - More: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+    - More: "https://www.ualberta.ca/"
   Alex At Home: ""
 
 ################
