--- a/_config.yml
+++ b/_config.yml
@@ -131,8 +131,8 @@ navbar-text-col: "#B47844"
 navbar-border-col: "#DDDDDD"
 page-col: "#B47844"
 text-col: "#283643"
-link-col: "#008AFF"
-hover-col: "#0085A1"
+link-col: "#ffffff"
+hover-col: "#ffffff"
 footer-col: "#283643"
 footer-text-col: "#B47844"
 footer-link-col: "#404040"
